--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/fonts.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/fonts.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Cadastre-se</title> 
 </head>
 <body>
@@ -67,7 +67,7 @@
         </div>
     </div>
     
-    <script src="/assets/js/showPassword.js"></script>
-    <script src="/assets/js/formValidation.js"></script>
+    <script src="./assets/js/showPassword.js"></script>
+    <script src="./assets/js/formValidation.js"></script>
 </body>
 </html>
