--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="cadastro">
             <div class="logo">
-                <img class="logo__img" src="/assets/imgs/logo.png" alt="logo" >
+                <img class="logo__img" src="./assets/imgs/logo.png" alt="logo" >
                 <a href="/" class="logo__link"></a>
             </div>
             <h1 class="cadastro__title">Cadastre-se</h1>
